--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,13 @@
-#Editor Configuration, see 
+#Editor Config
 root=true
 [*]
-charset = utf-8
-indent_style = space
-indent_size = 2
-insert_final_newline = true
-trim_trailing_whitespace = true
+charset=utf-8
+indent_style=space
+indent-size=4
+insert_final_newline=true
+trim_trailing_whitespace=true
 [*.js]
 quote_type=single
 [*.md]
 max_line_length=off
-trim_trailing_whitespace = false
+trim_trailing_whitespace=false
