--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.1"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
